--- a/app/src/main/res/layout/fragment_detalhes_ocorrencia.xml
+++ b/app/src/main/res/layout/fragment_detalhes_ocorrencia.xml
@@ -1,13 +1,44 @@
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.savio.focoaedes.fragments.Detalhes_OcorrenciaFragment">
+    android:fillViewport="true"
+    android:scrollbars="none">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DETALHES OCORRÊNCIA"/>
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/branquinho"
+        tools:context="com.example.savio.focoaedes.fragments.Detalhes_OcorrenciaFragment">
 
-</RelativeLayout>
+        <LinearLayout
+            android:id="@+id/detalhe_info"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="1">
+
+            <ImageView
+                android:id="@+id/detalhe_imagem"
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="0.8"
+                android:background="@android:color/darker_gray"/>
+
+            <TextView
+                android:id="@+id/detalhe_titulo"
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="0.1"
+                android:padding="10dp"
+                android:text="Titulo"
+                android:textColor="@android:color/black"
+                android:textSize="18dp"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</ScrollView>
