--- a/app/src/main/res/layout/lista_layout.xml
+++ b/app/src/main/res/layout/lista_layout.xml
@@ -63,7 +63,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height=".5dp"
+        android:layout_height="0.5dp"
         android:layout_marginTop="16dp"
         android:layout_below="@+id/lista_foto"
         android:background="@android:color/darker_gray"/>
